--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+/* Version 2 */
 /* wanna show some code */
 @import "highlighter.css";
 
@@ -728,8 +729,8 @@ align-items: center;
 
 .branding img.avatar {
   display: block;
-    height: 50px;
-    width: 50px;
+    max-height: 45px;
+    /* width: 50px; */
     margin: 0 0.5em;
     padding:0;
 }
