--- a/aboutme/css/style.css
+++ b/aboutme/css/style.css
@@ -93,6 +93,7 @@ border-radius: 50%;
 .instagram {
 float: center;
 width: 50px;
+padding-right: 5px;
 }
 
 .github {
@@ -103,6 +104,7 @@ width: 50px;
 .facebook {
 float: center;
 width: 50px;
+padding-left: 5px;
 }
 
 .highlight {
